fixed clipping with the awards section, might remove the afrl logo later because it makes the top/bottom date-content boxes not aligned anymore

--- a/index.css
+++ b/index.css
@@ -109,7 +109,7 @@ a:visited {
 
 #interests {
   display: flex;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
   align-items: center;
 
   flex-wrap: wrap;
@@ -133,7 +133,6 @@ a:visited {
   display: flex;
   justify-content: space-evenly;
   gap: 20px;
-  margin-right: 10px;
 }
 
 .column {
@@ -155,8 +154,8 @@ a:visited {
 }
 
 #awards-column2 img {
-  max-width: 135px;
-  max-height: 135px;
+  max-width: 110px;
+  max-height: 100%;
   width: auto;
   height: auto;
 }
@@ -171,7 +170,6 @@ a:visited {
 .bottom-icon {
   border: none;
 }
-
 
 .bottom-icon-bar {
   display: flex;
@@ -315,10 +313,10 @@ details[open] summary:before {
 
   #awards-double {
     flex-direction: column;
+    gap: 10px;
   }
 
   #awards-column2 img {
-    max-width: 100px;
-    margin-top: -15px;
+    max-width: 80px;
   }
 }
